tests/machine/x/ocaml/slice.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/slice.ml", line 30, characters 2-15:
30 |   print_endline string_slice "hello" 1 4;
       ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 30):
  28 |   print_endline (__show (slice [1;2;3] 1 3));
  29 |   print_endline (__show (slice [1;2;3] 0 2));
  30 |   print_endline string_slice "hello" 1 4;
  31 | 
